MDEV-12619 UNION creates excessive integer column types for integer literals